# verifiable-ai-stack

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DAYSENSOS.md  CONTRIBUTING.md  HANDOVER_20260511.md  HANDOVER_ADDENDUM.md  LICENSE  LICENSE-CODE  MANIFEST.in  MASTER_HANDOVER.md  Makefile  README.md  SECURITY.md  VISION.md  _redirects  autonomous_loop.py  backup.sh  cognitum_dev_loop.py  db.py  deploy.sh  dev_queue.yaml  docker-compose.yml  index.html  index_live_backup.html  main.py  mcp_server.py  publishing_agent.py  pyproject.toml  requirements.txt  run_loop.sh  spalten_agent.py  telegram_bot.py
.github/: CODEOWNERS  required-checks.md
.github/workflows/: ci.yml  deploy.yml  governance-audit.yml  monorepo-smoke.yml
agentsprotocol/: .gitlab-ci.yml  CONTRIBUTING.md  README.md  docker-compose.yml  requirements.txt
agentsprotocol/.devcontainer/: Dockerfile  devcontainer.json
agentsprotocol/detect/: DEPLOYMENT.md  api.py  fly.toml  index.html
agentsprotocol/docs/: api.md  architecture.md
agentsprotocol/embed/: .dockerignore  Dockerfile  fly.toml  main.py  requirements.txt
agentsprotocol/examples/: example_claim.json  kaspa_integration.py
agentsprotocol/platform/: index.html
agentsprotocol/schema/: claim-v1.0.json  control-set-v1.json
agentsprotocol/scripts/: seed_claim.py
civilization-operating-system/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  API.md  CHANGELOG.md  CONTRIBUTING.md  COS-v0.1.0-timestamp.txt  COS-v0.1.0-timestamp.txt.ots  LICENSE  REDDIT_POST.md  build-log.txt  jest.config.cjs  package-lock.json  package.json  tsconfig.json
cognitum/: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GO.sh  LICENSE  README.md  example_params.yaml  publishing_agent.py  run_bot.sh  run_revenue_spalten.py  status_loop.sh  stop_bot.sh  stop_loop.sh
cognitum/cna/: rules.py  (+1 more)
cognitum_audit/: audit_logger.py
cognitum_autopoiesis/: autopoiesis_engine.py
cognitum_core/: runtime.py
cognitum_memory/: memory_store.py
compliance/: README.md
corpus/: __init__.py  builder.py  dqm.py
crews/: agents.yaml
crsoc/: __init__.py  crsoc.py  crsoc_orchestrator.py  evaluation_metrics.py  idealisierung_engine.py  masterplan_updater.py  morphological_mapper.py  report_generator.py  temporal_feedback.py
daysensos/: __init__.py  l5_intelligence.py
daysensos-app/: app.json  package.json
detect/: Dockerfile  api.py  index.html  requirements.txt
docs/: COGNITUM_DESIGN_PRINCIPLES.md  README.md  daysensos-product-context.md  design_principles.json  getting-started.md  index.html  kaspa.md  masterplan.md  math.md  proofs.md  vision.md
embed/: Dockerfile  main.py
examples/: demo.py
gateway/: alias_dictionary.json  litellm_proxy.py  main.py  requirements.txt
governance/: constitution.md  data_routing.py  evaluator.py  gitops_handler.py  glossary.md  ingestion.py  masterplan.yaml  models.py  problem_generator.py  registry.py  relevance_filter.py  signal_sources.py  wiki_formatter.py
hf_space/: README.md  app.py  requirements.txt
launch/: show_hn.md
llmjson/: .gitignore  README.md  TODOS.md  pyproject.toml
llmjson/.github/workflows/: ci.yml
llmjson/docs/: index.html
llmjson/docs/blog/: how-i-got-100-percent-valid-json.html
llmjson/examples/: financial_transfer.schema.json  person.schema.json  quickstart.py
llmjson/llmjson/: __init__.py  _generate.py  _json_context.py  _schema_validator.py  _token_mapper.py  _types.py  _vocab_scanner.py  cli.py
llmjson/tests/: test_llmjson.py
mcp/: README.md
meta-bell/: README.md
mpps/: .gitlab-ci.yml  cognitum_engineering_agent.py  cognitum_product_development_framework.yaml  evaluator.py  methodenos_gumroad_listing.md
notebooks/: 01_meta_bell_theory.ipynb  02_wise_score_demo.ipynb
platform/: README.md  index.html
poisv/: .gitignore  CITATION.cff  LICENSE  README.md  db.py  deploy.sh  index.html  main.py
reports/: brier_history.json  crsoc_20260508_111021.json  crsoc_20260508_111124.json
scripts/: adr_generator.py  chat_indexer.py  dataset_exporter.py  evaluate_adrs.py  generate.py  rag_chat_history.py
src/validator/: Cargo.toml  Dockerfile
src/validator/src/: config.rs  consensus.rs  main.rs  mempool.rs  network.rs  rpc.rs  storage.rs  validation.rs  zk.rs
templates/: AGENTS.md.j2  CLAUDE.md.j2  Modelfile.j2  agents.yaml.j2  masterplan-doc.md.j2
tests/: test_autopoiesis_engine.py  test_pipeline.py  test_policy_engine.py  test_psi.py  test_registry.py  test_runtime.py  test_signal_sources.py  test_wise_score.py
tools/: simulate.py
validation/: masterplan_schema.py
veriethiccore/: __init__.py  act_checker.py  mcp_server.py  requirements.txt  smithery.yaml
(+211 files in other folders)
